[package]
name = "solbolt"
version = "0.1.0"
description = "SolBolt - Off-chain payment channels for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solbolt"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "~1.18.0"

[dev-dependencies]
solana-program-test = "~1.18.0"
solana-sdk = "~1.18.0" 